# FFmpeg_Linux_Examples

./: CMakeLists.txt
cmake/: FindFFmpeg.cmake
examples/test00_forward/: CMakeLists.txt  hello.cpp
examples/test01_file_move/: CMakeLists.txt  hello.cpp  log.cpp  log.h
